--- a/res/xml/broken_settings_statusbar.xml
+++ b/res/xml/broken_settings_statusbar.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
-        
+
     <PreferenceCategory
         android:key="category_battery_options"
         android:title="@string/display_category_batteryclock_options_title" >
@@ -12,7 +12,7 @@
         android:key="battery_style_pref"
         android:title="@string/battery_title"
     	android:summary="@string/battery2_summary" />
- 
+
     <PreferenceScreen
         android:key="battery_bar"
         android:fragment="com.android.settings.broken.BatteryBar"
@@ -24,9 +24,9 @@
         android:key="clock_style_pref"
         android:title="@string/status_bar_clock"
 	    android:summary="@string/status_bar_clock_summary" />
-	    
+
     </PreferenceCategory>
-        
+
     <PreferenceCategory
         android:key="statusbar_options_category"
         android:title="@string/statusbar_options_title" >
@@ -35,38 +35,44 @@
         android:key="status_bar_brightness_control"
         android:title="@string/status_bar_toggle_brightness"
         android:summary="@string/status_bar_toggle_brightness_summary"/>
-        
+
     <com.android.settings.broken.SystemSettingSwitchPreference
         android:key="status_bar_broken_logo"
         android:title="@string/status_bar_broken_logo_title"
         android:summary="@string/status_bar_broken_logo_summary"
         android:defaultValue="false"/>
-    	
+
     <PreferenceScreen
         android:fragment="com.android.settings.broken.CarrierLabel"
         android:key="carrierlabel"
-        android:title="@string/carrier_options" 
+        android:title="@string/carrier_options"
         android:summary="@string/carrier_summary" />
-        
+
+    <PreferenceScreen
+        android:key="status_bar_greeting_settings"
+        android:title="@string/status_bar_greeting_settings_title"
+        android:summary="@string/status_bar_greeting_settings_summary"
+        android:fragment="com.android.settings.broken.StatusBarGreetingSettings" />
+
     <ListPreference
         android:key="quick_pulldown"
         android:title="@string/title_quick_pulldown"
         android:entries="@array/quick_pulldown_entries"
         android:entryValues="@array/quick_pulldown_values"
         android:persistent="false" />
-    
+
     <PreferenceScreen
         android:id="@+id/qs_settings"
         android:title="@string/qs_settings_title"
         android:summary="@string/quick_settings_tiles_summary"
         android:fragment="com.android.settings.broken.QsSettings" />
-        
+
     <com.android.settings.broken.SystemSettingSwitchPreference
         android:key="status_bar_notif_count"
         android:title="@string/status_bar_notif_count_title"
         android:summary="@string/status_bar_notif_count_summary"
         android:defaultValue="false" />
-        
+
     <PreferenceScreen
             android:title="@string/status_bar_icon_blacklist_title"
             android:summary="@string/status_bar_icon_blacklist_summary" >
@@ -74,15 +80,15 @@
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.TunerActivity" />
     </PreferenceScreen>
-        
+
     <Preference
         android:key="traffic"
         android:fragment="com.android.settings.broken.Traffic"
-        android:title="@string/traffic_category" 
+        android:title="@string/traffic_category"
         android:summary="@string/traffic_settings_summary" />
-        
-    </PreferenceCategory>    
-        
+
+    </PreferenceCategory>
+
     <PreferenceCategory
         android:key="panel_options_category"
         android:title="@string/qs_panel_options_title" >
@@ -101,13 +107,13 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="status_bar_custom_header_text_shadow_color"
             android:title="@string/status_bar_custom_header_text_shadow_color_title" />
-                    
+
     <com.android.settings.broken.SystemSettingSwitchPreference
         android:key="status_bar_custom_header"
         android:title="@string/status_bar_custom_header_title"
         android:summary="@string/status_bar_custom_header_summary"
         android:defaultValue="false"/>
-        
+
     <com.android.settings.broken.widget.SeekBarPreferenceCham
          android:key="status_bar_custom_header_shadow"
          android:title="@string/status_bar_custom_header_shadow_title"
@@ -119,9 +125,9 @@
          settings:unitsRight=""
          android:persistent="false"
          android:dependency="status_bar_custom_header" />
-    
+
     </PreferenceCategory>
-    
+
     <PreferenceCategory
         android:key="weather_clock_category"
         android:title="@string/weather_clock_title" >
@@ -131,7 +137,7 @@
         android:title="@string/status_bar_show_weather_title"
         android:summary="@string/status_bar_show_weather_summary"
         android:defaultValue="false" />
-        
+
     <ListPreference
         android:key="status_bar_temperature"
         android:title="@string/status_bar_temperature_title"
@@ -154,7 +160,7 @@
         android:targetPackage="com.cyanogenmod.lockclock"
         android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
     </PreferenceScreen>
-        
+
     </PreferenceCategory>
 
 </PreferenceScreen>
