Statusbar greeting: Fix the timeout display Let's be real here. The way it was before wasn't realistic. The greeting doesn't stay for 500 seconds at its lowest setting. Make it show the correct denomination.
Change-Id: I81a0070802b5a87f6be3df4de1e285292138c12c
Signed-off-by: CrackerTeg <crackerteg@gmail.com>

--- a/res/xml/status_bar_greeting_settings.xml
+++ b/res/xml/status_bar_greeting_settings.xml
@@ -36,7 +36,7 @@
         android:max="10000"
         settings:min="100"
         settings:unitsLeft=""
-        settings:unitsRight="s"
+        settings:unitsRight="ms"
         settings:interval="500"
         android:persistent="false" />
 
