--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -61,6 +61,12 @@
             android:defaultValue="false" />
 
         <com.android.settings.broken.SecureSettingSwitchPreference
+            android:key="qs_bt_detail"
+            android:title="@string/qs_bt_detail_title"
+            android:summary="@string/qs_bt_detail_summary"
+            android:defaultValue="false" />
+
+        <com.android.settings.broken.SecureSettingSwitchPreference
             android:key="qs_use_four_columns"
             android:title="@string/qs_four_columns_title"
             android:defaultValue="false" />
