--- a/res/xml/navbar_settings.xml
+++ b/res/xml/navbar_settings.xml
@@ -31,7 +31,7 @@
                     android:fragment="com.android.settings.broken.dslv.ActionListViewSettings"
                     android:title="@string/navbar_button_title">
                 <extra android:name="actionMode" android:value="0" />
-                <extra android:name="maxAllowedButtons" android:value="5" />
+                <extra android:name="maxAllowedActions" android:value="7" />
                 <extra android:name="disableDeleteLastEntry" android:value="true" />
                 <extra android:name="fragment" android:value="com.android.settings.broken.fragments.NavbarButtonFragment" />
             </PreferenceScreen>
@@ -47,11 +47,11 @@
                 android:key="advanced_cat"
                 android:title="@string/advanced_settings">
 
-   			<SwitchPreference
-        			android:key="status_bar_ime_arrows"
-        			android:title="@string/show_ime_arrows_title"
-        			android:summary="@string/show_ime_arrows_summary"
-        			android:persistent="false" />
+            <SwitchPreference
+                    android:key="status_bar_ime_arrows"
+                    android:title="@string/show_ime_arrows_title"
+                    android:summary="@string/show_ime_arrows_summary"
+                    android:persistent="false" />
 
             <ListPreference
                     android:key="pref_navbar_menu_display"
@@ -76,7 +76,7 @@
                     android:key="navigation_bar_left"
                     android:title="@string/navigation_bar_left_title"
                     android:summary="@string/navigation_bar_left_summary" />
-            
+
         </PreferenceCategory>
 
         <PreferenceCategory
