Set nav bar to enabled by default
Change-Id: I9d5f581b9f2f8e213ae6fda3d60f41657db9278c

--- a/res/xml/navbar_settings.xml
+++ b/res/xml/navbar_settings.xml
@@ -20,7 +20,8 @@
         <SwitchPreference
                 android:key="enable_nav_bar"
                 android:title="@string/navbar_enable_bar"
-                android:summary="@string/navbar_enable_bar_summary" />
+                android:summary="@string/navbar_enable_bar_summary"
+                android:defaultValue="true" />
 
         <PreferenceCategory
                 android:key="navbar_cat"
