--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -383,6 +383,7 @@
     <string name="keys_action_long">Long press</string>
     <string name="keys_action_double">Double tap</string>
     <string name="no_home_key">You have no button assigned any more to the \"Home\" action!\n\nThis can make your device unusable!</string>
+    <string name="no_standard_key">You are removing buttons that may have stock navigation functions!\n\nThis may make your device unusable!</string>
 
     <!-- Button shorcut actions -->
     <string name="shortcut_action_back">Back</string>
