Add viper to sound settings

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -20,4 +20,7 @@
     <string name="changelog_title_summary">View recent changes in the ROM</string>
     <string name="changelog_error">Unable to load changelog</string>
 
+    <!--Embedded Viper4Android-->
+    <string name="viper_settings_title">Viper4Android</string>
+
 </resources>
