--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -89,6 +89,13 @@
                 android:summary="@string/changelog_title_summary"
                 android:fragment="com.android.settings.broken.ChangeLog" />
 
+        <!-- Device Maintainers -->
+        <Preference
+                android:key="device_maintainer"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/device_maintainer"
+                android:summary="@string/broken_device_maintainer" />
+
         <!-- Security patch level -->
         <PreferenceScreen android:key="security_patch"
                 android:title="@string/security_patch"
