--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -32,4 +32,10 @@
     <string name="device_maintainers">Device maintainers</string>
     <string name="broken_device_maintainer">Device maintainer</string>
 
+    <!-- About phone screen -->
+    <string name="cpu_info">CPU</string>
+    <string name="mem_info">Memory</string>
+    <string name="build_id">Android-Build-ID</string>
+    <string name="build_date">Build Date</string>
+
 </resources>
