DeviceInfoSettings: Add and remove preferences: - Add CPU - Add Memory - Add Build ID - Add Build version - Add Build date - Remove AOSP System Updates - Kill Regulatory Info

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -72,12 +72,42 @@
                 android:title="@string/model_number"
                 android:summary="@string/device_info_default"/>
 
+        <!-- Device cpu info -->
+        <Preference android:key="device_cpu"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/cpu_info"
+                android:summary="@string/device_info_default"/>
+
+        <!-- Device mem info -->
+        <Preference android:key="device_memory"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/mem_info"
+                android:summary="@string/device_info_default"/>
+
         <!-- Device firmware version -->
         <Preference android:key="firmware_version"
                 android:enabled="false"
                 android:shouldDisableView="false"
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
+
+        <!-- Broken firmware version -->
+        <Preference android:key="broken_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/broken_version_title"
+                android:summary="@string/broken_version_default"/>
+
+        <!-- Device build id -->
+        <Preference android:key="build_id"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_id"
+                android:summary="@string/device_info_default"/>
+
+        <!-- Build date -->
+        <Preference android:key="build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_date"
+                android:summary="@string/device_info_default" />
 
         <!-- Changelog -->
         <PreferenceScreen android:key="changelog"
@@ -98,12 +128,6 @@
                 android:shouldDisableView="false"
                 android:title="@string/security_patch"
                 android:summary="@string/device_info_default"/>
-
-        <!-- Slim firmware version -->
-        <Preference android:key="broken_version"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/broken_version_title"
-                android:summary="@string/broken_version_default"/>
 
         <!-- Device FCC equipment id -->
         <Preference android:key="fcc_equipment_id"
