--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -35,13 +35,23 @@
 
         <!-- Broken OTA -->
         <PreferenceScreen
-               android:key="slimota"
-               android:title="@string/slimota_title" >
+               android:key="brokenota"
+               android:title="@string/brokenota_title" >
                <intent
-                       android:action="android.intent.action.MAIN"
-                       android:targetPackage="com.fusionjack.slimota"
-                       android:targetClass="com.fusionjack.slimota.MainActivity" />
+                   android:action="android.intent.action.MAIN"
+                   android:targetPackage="com.fusionjack.brokenota"
+                   android:targetClass="com.fusionjack.brokenota.MainActivity" />
         </PreferenceScreen>
+
+        <!-- BrokenCenter -->
+        <PreferenceScreen
+                android:key="@+id/brokencenter"
+                android:title="@string/broken_center_title">
+                <intent
+                    android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.broken.ota"
+                    android:targetClass="com.broken.center.BrokenCenter" />
+	    </PreferenceScreen>
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
