Broken Pieces: Add to settings and setup the subsections Ported from Broken MM code Thanks to @camcory for showing the way with the new manifest setup Adapted from: https://github.com/AOSIP/platform_packages_apps_Settings/commit/ef70c73287c355e345f49ad07c40ea8299d3c4c8 and https://gerrit.omnirom.org/#/c/19432/

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -47,4 +47,14 @@
     <!-- BrokenCenter -->
     <string name="broken_center_title">BrokenCenter</string>
 
+    <!-- Broken pieces -->
+    <string name="header_category_brokensettings">Customizations</string>
+    <string name="broken_settings_title">Broken Pieces</string>
+    <string name="status_bar_screen_title">Status bar</string>
+    <string name="navigation_bar_screen_title">Navigation bar</string>
+    <string name="gestures_title">Gestures</string>
+    <string name="lockscreen_title">Lock screen</string>
+    <string name="power_menu_title">Power menu</string>
+    <string name="volume_rocker_screen_title">Volume rocker</string>
+
 </resources>
